<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CityActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="70dp">


        <TextView
            android:id="@+id/city_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="28sp"
            android:hint="Porto" />

        <TextView
            android:id="@+id/city_title_weather"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:hint="Clear"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/city_current_temp"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:hint="24º"
            android:textSize="40sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:clipToPadding="false"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/city_min_temp"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:hint="10ºC"
                android:paddingRight="15dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/city_max_temp"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:hint="30ºC"
                android:textSize="18sp" />

        </LinearLayout>


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:id="@+id/city_weather_icon"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:clipToPadding="false"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="10dp">

            <TextView
                android:id="@+id/city_air_pressure_label"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:paddingRight="10dp"
                android:text="@string/city_air_pressure_label"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/city_air_pressure"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="10"
                android:textSize="24sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:clipToPadding="false"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="10dp">

            <TextView
                android:id="@+id/city_air_humidity_label"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:paddingRight="10dp"
                android:text="@string/city_air_humidity_label"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/city_air_humidity"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="10"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:clipToPadding="false"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="10dp">

            <TextView
                android:id="@+id/city_sunrise_label"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:paddingRight="10dp"
                android:text="@string/city_sunrise_label"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/city_sunrise"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="10"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:clipToPadding="false"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingLeft="10dp">

            <TextView
                android:id="@+id/city_sunset_label"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:paddingRight="10dp"
                android:text="@string/city_sunset_label"
                android:textSize="24sp" />
            <TextView
                android:id="@+id/city_sunset"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="10"
                android:textSize="24sp" />

        </LinearLayout>




    </LinearLayout>

</com.google.android.material.card.MaterialCardView>